maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: '{' expected but 'case' found.
    case 1 => avance()
    ^RandomMouseMaze:5: error: '}' expected but 'case' found.
    case 2 => droite()
    ^