maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    random3() match
    case 1 => avance()
    case 2 => droite()
}
